# Deltix-Mock-Task

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  bars_generator.cpp  bars_generator.hpp  main.cpp
